--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-h1,
-p {
-  font-family: Lato;
-}
-
 .submitButton {
   margin: 1px;
   color: yellow;
@@ -29,7 +24,15 @@ p {
 }
 
 body {
-  font-size: 14px;
+  font-size: 21px;
+  font-family: medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+}
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
 #card {
@@ -40,4 +43,34 @@ body {
   height: 250px;
   padding-right: 15px;
   padding-left: 15px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 0px solid #e7e7e7;
+  background-color: #f3f3f3;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #ddd;
+}
+
+li a.active {
+  color: white;
+  background-color: #4caf50;
 }
